@@ -375,20 +375,29 @@ val transl_class_path: scoped_location -> Env.t -> Path.t -> lambda
 
 val make_sequence: ('a -> lambda) -> 'a list -> lambda
 
-val subst: (Ident.t -> Types.value_description -> Env.t -> Env.t) ->
+val subst:
+  (Ident.t -> Types.value_description -> Env.t -> Env.t) ->
+  ?freshen_bound_variables:bool ->
   lambda Ident.Map.t -> lambda -> lambda
-(** [subst env_update_fun s lt] applies a substitution [s] to the lambda-term
-    [lt].
+(** [subst update_env ?freshen_bound_variables s lt]
+    applies a substitution [s] to the lambda-term [lt].
 
     Assumes that the image of the substitution is out of reach
     of the bound variables of the lambda-term (no capture).
 
-    [env_update_fun] is used to refresh the environment contained in debug
-    events.  *)
+    [update_env] is used to refresh the environment contained in debug
+    events.
+
+    [freshen_bound_variables], which defaults to [false], freshens
+    the bound variables within [lt].
+ *)
 
 val rename : Ident.t Ident.Map.t -> lambda -> lambda
 (** A version of [subst] specialized for the case where we're just renaming
     idents. *)
+
+val duplicate : lambda -> lambda
+(** Duplicate a term, freshening all locally-bound identifiers. *)
 
 val map : (lambda -> lambda) -> lambda -> lambda
   (** Bottom-up rewriting, applying the function on
